--- a/micronaut/pom.xml
+++ b/micronaut/pom.xml
@@ -14,7 +14,7 @@
 			<dependency>
 				<groupId>io.micronaut</groupId>
 				<artifactId>micronaut-bom</artifactId>
-				<version>2.1.1</version>
+				<version>${micronaut.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
