--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,29 +10,18 @@ jobs:
     steps:
     - name: Checkout project
       uses: actions/checkout@v2
-    - name: Set up JDK 16
-      uses: actions/setup-java@v1
+    - name: Set up JDK 15
+      uses: actions/setup-java@v2
       with:
-        java-version: 16
-    - name: Cache SonarCloud packages
-      uses: actions/cache@v2
-      with:
-        path: ~/.sonar/cache
-        key: ${{ runner.os }}-sonar
-        restore-keys: ${{ runner.os }}-sonar
+        java-version: 15
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
-    - name: Set up Apache Maven Central
-      uses: actions/setup-java@v1
-      with:
-        java-version: 11
     - name: Build
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: >
-        mvn -B -ntp verify sonar:sonar "-Dsonar.coverage.jacoco.xmlReportPaths=**/target/site/jacoco.xml"
+        mvn -B -ntp verify
