--- a/spring-boot-webmvc/pom.xml
+++ b/spring-boot-webmvc/pom.xml
@@ -7,7 +7,7 @@
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>spring-boot-webmvc</artifactId>
-	<name>Spring Boot Web MVC</name>
+	<name>Spring Boot - WebMVC</name>
 
 	<dependencies>
 		<dependency>
