--- a/vertx/pom.xml
+++ b/vertx/pom.xml
@@ -6,10 +6,23 @@
 		<artifactId>parent</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>spring-boot-webflux</artifactId>
-	<name>Spring Boot - WebFlux</name>
+	<artifactId>vertx</artifactId>
+	<name>Vert.x</name>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>io.vertx</groupId>
+      	<artifactId>vertx-stack-depchain</artifactId>
+      	<version>${vertx.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
+	
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>core</artifactId>
@@ -17,22 +30,21 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
-			<version>${spring-boot.version}</version>
+			<groupId>io.vertx</groupId>
+			<artifactId>vertx-web</artifactId>
+    </dependency>
+
+		<dependency>
+			<groupId>io.vertx</groupId>
+			<artifactId>vertx-junit5</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<version>${spring-boot.version}</version>
+			<groupId>io.reactiverse</groupId>
+			<artifactId>reactiverse-junit5-web-client</artifactId>
+			<version>0.3.0</version>
 			<scope>test</scope>
 		</dependency>
-
-		<!-- <dependency>
-			<groupId>io.projectreactor</groupId>
-			<artifactId>reactor-test</artifactId>
-			<scope>test</scope>
-		</dependency> -->
-	  </dependencies>
+	</dependencies>
 </project>
