--- a/micronaut/pom.xml
+++ b/micronaut/pom.xml
@@ -14,7 +14,7 @@
 			<dependency>
 				<groupId>io.micronaut</groupId>
 				<artifactId>micronaut-bom</artifactId>
-				<version>2.1.1</version>
+				<version>${micronaut.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -41,6 +41,17 @@
 		<dependency>
 			<groupId>io.micronaut</groupId>
 			<artifactId>micronaut-http-server-netty</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.micronaut.test</groupId>
+			<artifactId>micronaut-test-junit5</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.micronaut</groupId>
+			<artifactId>micronaut-http-client</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
