--- a/quarkus/pom.xml
+++ b/quarkus/pom.xml
@@ -7,10 +7,7 @@
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>quarkus</artifactId>
-
-	<properties>
-		<quarkus.version>1.9.0.Final</quarkus.version>
-	</properties>
+	<name>Quarkus</name>
 
 	<dependencyManagement>
 		<dependencies>
@@ -52,17 +49,17 @@
 	<build>
 		<plugins>
 			<plugin>
-                <groupId>io.quarkus</groupId>
-                <artifactId>quarkus-maven-plugin</artifactId>
-                <version>${quarkus.version}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>build</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+				<groupId>io.quarkus</groupId>
+				<artifactId>quarkus-maven-plugin</artifactId>
+				<version>${quarkus.version}</version>
+				<executions>
+						<execution>
+								<goals>
+										<goal>build</goal>
+								</goals>
+						</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
