--- a/spring-boot-webmvc/pom.xml
+++ b/spring-boot-webmvc/pom.xml
@@ -7,11 +7,7 @@
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>spring-boot-webmvc</artifactId>
-	<name>Spring Boot Web MVC</name>
-
-	<properties>
-		<spring-boot.version>2.3.4.RELEASE</spring-boot.version>
-	</properties>
+	<name>Spring Boot - WebMVC</name>
 
 	<dependencies>
 		<dependency>
