--- a/helidon-mp/pom.xml
+++ b/helidon-mp/pom.xml
@@ -32,6 +32,12 @@
 			<groupId>io.helidon.microprofile.bundles</groupId>
 			<artifactId>helidon-microprofile-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.jboss</groupId>
+			<artifactId>jandex</artifactId>
+			<version>2.2.3.Final</version>
+			<scope>runtime</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>io.helidon.microprofile.tests</groupId>
@@ -39,4 +45,19 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.jboss.jandex</groupId>
+				<artifactId>jandex-maven-plugin</artifactId>
+				<version>1.0.8</version>
+				<executions>
+					<execution>
+						<id>make-index</id>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
