--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,11 +10,11 @@ jobs:
     steps:
     - name: Checkout project
       uses: actions/checkout@v2
-    - name: Set up JDK 15
+    - name: Set up JDK
       uses: actions/setup-java@v2
       with:
         distribution: 'adopt'
-        java-version: 15
+        java-version: 16
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
