Addressing jandex issues

--- a/helidon-mp/pom.xml
+++ b/helidon-mp/pom.xml
@@ -55,6 +55,10 @@
 				<executions>
 					<execution>
 						<id>make-index</id>
+						<goals>
+							<goal>jandex</goal>
+						</goals>
+						<phase>process-classes</phase>
 					</execution>
 				</executions>
 			</plugin>
