--- a/core/pom.xml
+++ b/core/pom.xml
@@ -12,4 +12,13 @@
 	<properties>
 		<jib.skip>true</jib.skip>
 	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>2.2.3</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
 </project>
