--- a/helidon-se/pom.xml
+++ b/helidon-se/pom.xml
@@ -29,8 +29,27 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>2.0.0-alpha1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>io.helidon.webserver</groupId>
 			<artifactId>helidon-webserver</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.helidon.config</groupId>
+			<artifactId>helidon-config-yaml</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.helidon.media</groupId>
+			<artifactId>helidon-media-jsonb</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>4.0.3</version>
 		</dependency>
 
 		<dependency>
