--- a/pom.xml
+++ b/pom.xml
@@ -27,15 +27,16 @@
 
 		<dropwizard.version>2.0.21</dropwizard.version>
 		<helidon.version>2.3.0</helidon.version>
-		<micronaut.version>2.5.3</micronaut.version>
-		<quarkus.version>1.13.4.Final</quarkus.version>
-		<spring-boot.version>2.4.5</spring-boot.version>
-		<vertx.version>4.0.3</vertx.version>
+		<micronaut.version>2.5.5</micronaut.version>
+		<micronaut-data.version>2.4.4</micronaut-data.version>
+		<quarkus.version>1.13.7.Final</quarkus.version>
+		<spring-boot.version>2.5.0</spring-boot.version>
+		<vertx.version>4.1.0</vertx.version>
 	</properties>
 
 	<modules>
 		<module>core</module>
-		<module>benchmark</module>		
+		<module>benchmark</module>
 		<module>dropwizard</module>
 		<module>helidon-se</module>
 		<module>helidon-mp</module>
@@ -47,6 +48,11 @@
 	</modules>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>[1.4,1.5)</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
