--- a/dropwizard/pom.xml
+++ b/dropwizard/pom.xml
@@ -32,6 +32,10 @@
 			<groupId>io.dropwizard</groupId>
 			<artifactId>dropwizard-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.dropwizard</groupId>
+			<artifactId>dropwizard-hibernate</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>io.dropwizard</groupId>
