--- a/dropwizard/src/main/resources/config.yaml
+++ b/dropwizard/src/main/resources/config.yaml
@@ -1,3 +1,8 @@
 server:
   requestLog:
     appenders: []
+database:
+  driverClass: org.h2.Driver
+  url:  jdbc:h2:mem:app;INIT=RUNSCRIPT FROM 'classpath:META-INF/create.sql'
+  user: sa
+  password: ""
