--- a/quarkus/pom.xml
+++ b/quarkus/pom.xml
@@ -9,12 +9,10 @@
 	</parent>
 	<artifactId>quarkus</artifactId>
 	<name>Quarkus</name>
-
 	<properties>
-		<quarkus.jib.base-jvm-image>adoptopenjdk/openjdk16:alpine</quarkus.jib.base-jvm-image>
 		<quarkus.container-image.name>${project.artifactId}</quarkus.container-image.name>
+		<quarkus.jib.base-jvm-image>adoptopenjdk/openjdk16:alpine</quarkus.jib.base-jvm-image>
 	</properties>
-
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -51,17 +49,25 @@
 		</dependency>
 		<dependency>
 			<groupId>io.quarkus</groupId>
-			<artifactId>quarkus-junit5</artifactId>
-			<scope>test</scope>
+			<artifactId>quarkus-container-image-jib</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.quarkus</groupId>
-			<artifactId>quarkus-container-image-jib</artifactId>
+			<artifactId>quarkus-resteasy-jsonb</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-junit5</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.jboss.jandex</groupId>
+				<artifactId>jandex-maven-plugin</artifactId>
+			</plugin>
 			<plugin>
 				<groupId>io.quarkus</groupId>
 				<artifactId>quarkus-maven-plugin</artifactId>
