--- a/quarkus/src/main/resources/application.properties
+++ b/quarkus/src/main/resources/application.properties
@@ -4,4 +4,4 @@ quarkus.datasource.password =
 quarkus.datasource.jdbc.url = jdbc:h2:mem:app;INIT=RUNSCRIPT FROM 'classpath:META-INF/create.sql'
 
 # drop and create the database at startup (use `update` to only update the schema)
-quarkus.hibernate-orm.database.generation = drop-and-create
+# quarkus.hibernate-orm.database.generation = drop-and-create
