--- a/vertx/src/main/resources/config.json
+++ b/vertx/src/main/resources/config.json
@@ -1,5 +1,6 @@
 {
 	"port": 8080,
+	"host": "0.0.0.0",
 	"db": {
 		"driver_class": "org.h2.Driver",
 		"url": "jdbc:h2:mem:app;INIT=RUNSCRIPT FROM 'classpath:META-INF/create.sql'",
