--- a/helidon-mp/src/main/resources/application.yaml
+++ b/helidon-mp/src/main/resources/application.yaml
@@ -6,6 +6,6 @@ javax:
       default:
         dataSourceClassName: org.h2.jdbcx.JdbcDataSource
         dataSource:
-          url: jdbc:h2:mem:app;INIT=RUNSCRIPT FROM 'classpath:META-INF/create.sql'
+          url: jdbc:h2:mem:app'
           user: sa
           password: ""
