--- a/helidon-mp/pom.xml
+++ b/helidon-mp/pom.xml
@@ -96,6 +96,15 @@
 				<groupId>org.jboss.jandex</groupId>
 				<artifactId>jandex-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<configuration>
+					<container>
+						<mainClass>io.helidon.microprofile.cdi.Main</mainClass>
+					</container>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
