--- a/helidon-mp/pom.xml
+++ b/helidon-mp/pom.xml
@@ -60,13 +60,19 @@
 		<dependency>
 			<groupId>org.glassfish.jersey.media</groupId>
 			<artifactId>jersey-media-json-binding</artifactId>
-			<version>2.34</version>
+			<version>2.35</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss</groupId>
 			<artifactId>jandex</artifactId>
 			<version>2.2.3.Final</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>2.0.0-alpha1</version>
 			<scope>runtime</scope>
 		</dependency>
 
