--- a/micronaut/pom.xml
+++ b/micronaut/pom.xml
@@ -50,6 +50,10 @@
 			<artifactId>micronaut-http-server-netty</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.micronaut.rxjava2</groupId>
+			<artifactId>micronaut-rxjava2</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>io.micronaut.data</groupId>
 			<artifactId>micronaut-data-processor</artifactId>
 			<scope>provided</scope>
@@ -62,7 +66,7 @@
 			<groupId>io.micronaut.sql</groupId>
 			<artifactId>micronaut-jdbc-hikari</artifactId>
 			<scope>runtime</scope>
-	</dependency>
+		</dependency>
 
 		<dependency>
 			<groupId>io.micronaut.test</groupId>
@@ -70,8 +74,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>io.micronaut</groupId>
-			<artifactId>micronaut-http-client</artifactId>
+			<groupId>io.micronaut.rxjava2</groupId>
+	    <artifactId>micronaut-rxjava2-http-client</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
