--- a/micronaut/pom.xml
+++ b/micronaut/pom.xml
@@ -50,8 +50,8 @@
 			<artifactId>micronaut-http-server-netty</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.micronaut.rxjava2</groupId>
-			<artifactId>micronaut-rxjava2</artifactId>
+			<groupId>io.micronaut.reactor</groupId>
+			<artifactId>micronaut-reactor</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.micronaut.data</groupId>
@@ -74,8 +74,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>io.micronaut.rxjava2</groupId>
-	    <artifactId>micronaut-rxjava2-http-client</artifactId>
+			<groupId>io.micronaut.reactor</groupId>
+			<artifactId>micronaut-reactor-http-client</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
